feat: report cashflow dan summary category
