# assignment5/cashflow-svc/internal/model/cashflowReportRequest.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type CashFlowReportRequest struct {
+	UserID    int32
+	WalletID  int32
+	StartTime *time.Time
+	EndTime   *time.Time
+}
