# assignment5/cashflow-svc/internal/model/lastTransactionRequest.go
@@ -1,0 +1,6 @@
+package model
+
+type LastTransactionRequest struct {
+	WalletID int `json:"walletID"`
+	UserID   int `json:"userID"`
+}
