# assignment5/cashflow-svc/internal/model/summaryCategoryRequest.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type SummaryCategoryRequest struct {
+	UserID    int32
+	WalletID  int32
+	StartTime *time.Time
+	EndTime   *time.Time
+}
